# status_files_BlobStorage

./: .gitignore  README.md  pyproject.toml  webscraping.py
utils/: funcoes.py  variables.json
